# obs-twitch-mcp

./: .gitignore  README.md  STABILITY_NOTES.md  audio-monitor.py  audio-settings-baseline.md  audio-settings-current.md  auth.py  auto-switch-scene.py  auto-translate.py  chat-monitor.py  chat-server.py  health-monitor.py  lurk-monitor.py  pyproject.toml  run-pngtuber.sh  serve-assets.py  setenv.example.bat  setenv.example.sh  test_bg_service.sh  translate_now.sh
.claude/commands/: shoutout.md
assets/: animated-dove.html  animated-mage.html  animated-pancakes.html  animated-spoogie.html  audio-levels.json  bouncy-bunny.html  bravely-default-cam-border.html  bravely-default-frame.html  bravely-default-game-border.html  camera-border.html  children-of-mana-starting.html  claude-badge.html  claude-strife-mock.html  countdown-timer.html  dancing-cat.html  f-to-pay-respects.html  goodbye-leouran.html  kanji-cheatsheet.html  lurk-animation.html  megaman-x8-demake-frame.html  mmx8-brb.html  mmx8-buster-shot.html  mmx8-cam-border.html  mmx8-game-border.html  mmx8-sidebar-panel.html  mmx8-starting-screen.html  nahn-nuzlocke-rip.html  nahnegnal-qte.html  oh-crap-panic.html  pngtuber-mage.html  raid-outro.html  retro-chat.html  retro-text.html  roast-overlay.html  second-wind.html  shoutout-empyz.html  stream-starting-ai.html  ultima-cam-border.html  ultima-game-border.html  ultima-scene-frame.html  (+4 more)
assets/chat-overlay/: jrpg.html  minimal.html  retro.html
docs/: _config.yml  index.md
docs/guides/: automation.md  getting-started.md  tool-reference.md  translation.md
scenes/: Untitled.json  Untitled.json.bak
scripts/: snapshot-scenes.sh
src/: __main__.py  app.py  server.py
src/tools/: __init__.py  alerts.py  (+18 more)
(+18 files in other folders)
