[project]
name = "obs-twitch-mcp"
version = "0.1.0"
description = "Unified MCP server for OBS Studio and Twitch integration with real-time game translation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "obsws-python>=1.7.0",
    "twitchAPI>=4.0.0",
    "pillow>=10.0.0",
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.1.0",
    "imagehash>=4.3.1",
    "anthropic>=0.39.0",
    "manga-ocr>=0.1.14",
    "playwright>=1.40.0",
    "nest-asyncio>=1.5.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
# Future platform upload support
rumble = []
peertube = []
instagram = []
tiktok = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
